Add route to get user profile by GitHubId
